<resources>
    <string name="app_name">Rich On Pay</string>
    <string name="my_bank_account">Rekening Bank Saya</string>
    <string name="server_maintenance">Terjadi kesalahan yang tidak diketahui. Tolong coba lagi nanti.</string>
    <string name="timeout_message">Oops, kami tidak dapat terbung ke server, Silakan periksa koneksi internet Anda.</string>
    <string name="session_over">Session login Anda sudah habis.\nMohon ulang Login untuk melanjutkan kegiatan Anda.</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="forgot_password">LUPA KATA SANDI?</string>
    <string name="signin">Masuk</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="phone_number">Nomor Handphone</string>
    <string name="leader_code">Kode Leader</string>
    <string name="sponsor_code">Kode Sponsor</string>
    <string name="confirm_password">Ulangi Kata Sandi</string>
    <string name="i_have_a_referral_code">Saya Memiliki Kode Referral</string>
    <string name="agree_with_terms">Dengan mendaftar Anda telah setuju dengan ketentuan layanan kami</string>
    <string name="register">Daftar</string>
    <string name="loading">Loading...</string>
    <string name="dont_have_an_account_register_now">Belum Punya Akun? Daftar Sekarang</string>
    <string name="press_again_to_exit">Tekan lagi untuk keluar</string>
    <string name="home">Beranda</string>
    <string name="order">Pesanan</string>
    <string name="scan_qr">Scan QR</string>
    <string name="notification">Notifikasi</string>
    <string name="account">Akun</string>
    <string name="no_orders_found">Pesanan Tidak Ditemukan</string>
    <string name="you_havent_order_yet_message">Anda belum memiliki pesanan, Silahkan lakukan transaksi terlebih dahulu</string>
    <string name="balance">Saldo</string>
    <string name="point">Poin</string>
    <string name="topup">Isi Saldo</string>
    <string name="exchange">Tukar</string>
    <string name="digital_product">Produk Digital</string>
    <string name="please_insert_email">Please insert your email</string>
    <string name="please_insert_phone">Please insert your phone number</string>
    <string name="please_insert_valid_email">Please insert an valid email</string>
    <string name="please_insert_valid_name">Name must be at least 3 characters</string>
    <string name="please_insert_valid_phone">Phone must be at least 10 characters</string>
    <string name="please_insert_valid_password">Password must be at least 6 characters</string>
    <string name="dialog_ok">Ok</string>
    <string name="passwords_dont_match">Passwords do not match</string>
    <string name="email_or_phone_number">Email atau No.Handphone</string>
    <string name="verification">Verifikasi</string>
    <string name="please_enter_otp_code_we_sent_you">Silahkan masukkan kode verifikasi yang telah kami kirimkan ke</string>
    <string name="important">Penting</string>
    <string name="popup_add_bank_account_message">Anda belum memasukkan nomor rekening ke akun Anda, Silahkan masukkan nomor rekening untuk mendapatkan pencairan dana bonus.</string>
    <string name="later">Nanti Saja</string>
    <string name="add_masukkan">Masukkan</string>
    <string name="sorry">Mohon Maaf</string>
    <string name="this_feature_is_still_on_development">Fitur ini sedang dalam tahap pengembangan</string>
    <string name="oke">Oke</string>
    <string name="no_notifications_found">Notifikasi Tidak Ditemukan</string>
    <string name="you_dont_have_any_notifications_yet">Anda belum memiliki notifikasi</string>
    <string name="referral_code">Kode Referral</string>
    <string name="share_code">Bagikan Kode</string>
    <string name="want_a_better_bonus">Mau nikmatin bonus lebih tinggi?</string>
    <string name="upgrade_package">Upgrade Paket</string>
    <string name="point_mutation">Mutasi Poin</string>
    <string name="bonus_mutation">Mutasi Bonus</string>
    <string name="free_member">Free Member</string>
    <string name="silver_member">Silver Member</string>
    <string name="gold_member">Gold Member</string>
    <string name="platinum_member">Platinum Member</string>
    <string name="join_fee">Join Fee</string>
    <string name="cashback_jaringan">Cashback Jaringan</string>
    <string name="dari_total_transaksi_jaringan_bawah">dari total transaksi\njaringan bawah</string>
    <string name="perday">Perhari</string>
    <string name="income_potential">Potensi Penghasilan</string>
    <string name="package_detail">Detail Paket</string>
    <string name="only_verified_member_can_upgrade">Hanya pengguna yang terverifikasi yang dapat melakukan upgrade paket member.</string>
    <string name="select_nominal">Pilih Nominal</string>
    <string name="or_enter_your_amount">atau masukkan nominal</string>
    <string name="rupiah">Rp</string>
    <string name="sample_topup_value">250.000</string>
    <string name="max_balance_amount">Maksimum saldo Anda ialah Rp 1.000.000.</string>
    <string name="proceed_to_payment">Lanjut Ke Pembayaran</string>
    <string name="waiting">Menunggu</string>
    <string name="select_bank_payment">Pilih Bank Pembayaran</string>
    <string name="current_balance">Saldo Sekarang</string>
    <string name="update_available">"Pembaruan "</string>
    <string name="update_message">Ada pembaruan baru yang tersedia, perbarui sekarang untuk mendapatkan fitur terbaru!</string>
    <string name="pay_now">Bayar Sekarang</string>
    <string name="isi_saldo">Isi Saldo</string>
    <string name="skip_this_version">Lewati versi ini</string>
    <string name="update_now">Perbarui Sekarang</string>
    <string name="payment">Pembayaran</string>
    <string name="please_insert_valid_account_number">Nomor rekening minimal harus terdiri dari 6 karakter</string>
    <string name="total_payment">Total Pembayaran</string>
    <string name="pastikan_jumlah_transfer_tepat_hingga_3_digit_terakhir">Pastikan jumlah transfer tepat hingga 3 digit terakhir.</string>
    <string name="transfer_to">Transfer ke</string>
    <string name="klik_tombol_dibawah_ini_setelah_menyelesaikan_pembayaran">Klik tombol dibawah ini setelah menyelesaikan pembayaran</string>
    <string name="saya_sudah_bayar">Saya Sudah Bayar</string>
    <string name="cancel_it">Batalkan</string>
    <string name="add_bank_account">Tambah Rekening</string>
    <string name="bank_name">Nama Bank</string>
    <string name="select_a_bank">Pilih nama bank anda</string>
    <string name="bank_account_owner">Nama Pemilik Rekening</string>
    <string name="insert_name">Masukan nama pemilik rekening</string>
    <string name="account_number">Nomor Rekening</string>
    <string name="insert_bank_account_number">Masukan nomor rekening</string>
    <string name="important_semicolon">Penting:</string>
    <string name="add_bank_memo">Nama pemilik rekening wajib sama dengan nama KTP sesuai verifikasi akun.</string>
    <string name="save">Simpan</string>
    <string name="success">Sukses</string>
    <string name="your_account_has_been_saved">Rekening Anda berhasil tersimpan</string>
    <string name="clear_all">Clear All</string>
    <string name="delete_bank_account">Hapus Rekening</string>
    <string name="set_main_bank_account">Jadikan Rekening Utama</string>
    <string name="balance_mutation">Mutasi Saldo</string>
    <string name="verify_user_data">Verifikasi Data Diri</string>
    <string name="camera_permission_message">Izin kamera diperlukan untuk mengambil gambar</string>
    <string name="camera_permission">Izin kamera</string>
    <string name="network">Jaringan</string>
    <string name="account_setting">Pengaturan Akun</string>
    <string name="information">Informasi</string>
    <string name="change_phone_number">Ganti Nomor Handphone</string>
    <string name="change_email">Ganti Email</string>
    <string name="bank_account">Rekening Bank</string>
    <string name="previous_phone_number">Nomor Handphone Lama</string>
    <string name="new_phone_number">Nomor Handphone Baru</string>
    <string name="previous_email">Email Lama</string>
    <string name="new_email">Email Baru</string>
    <string name="your_phone_number_has_been_successfully_changed_to">Nomor handphone anda berhasil diganti ke</string>
    <string name="your_email_was_successfully_changed_to">Email anda berhasil diganti ke</string>
    <string name="add_account">Tambah Rekening</string>
    <string name="kartu_tanda_penduduk_ktp">KARTU TANDA PENDUDUK (KTP)</string>
    <string name="verify_account_bonus_desc">Dengan melakukan verifikasi KTP akun Anda akan dapat melakukan penarikan saldo, mendapatkan bonus point dari transaksi serta cashback reward.</string>
    <string name="verify_now">Verifikasi Sekarang</string>
    <string name="ongoing">Sedang Diproses</string>
    <string name="successful">Berhasil</string>
    <string name="send">Kirim</string>
    <string name="retake_photo">Ulang Foto</string>
    <string name="verify_nric_description">Pastikan seluruh foto KTP di daerah kotak yang telah disediakan dan terlihat jelas.</string>
    <string name="foto_ktp">Foto KTP</string>
    <string name="pencairan_bonus_setiap_tanggal_25_perbulan_dikirim_ke_rekening_utama_pada_akun">Pencairan bonus setiap tanggal 25 perbulan, dikirim ke rekening utama pada akun.</string>
    <string name="dash">-</string>
    <string name="tampilkan_periode">Tampilkan Periode</string>
    <string name="pending">Pending</string>
    <string name="your_total_pending_bonus">Total Bonus Pending Anda</string>
    <string name="total_successful_bonus">Total Bonus Berhasil</string>
    <string name="your_total_point">Total Poin Anda</string>
    <string name="your_total_balance">Total Saldo Anda</string>
    <string name="period">Periode</string>
    <string name="more_detail">More Detail</string>
    <string name="less_detail">Less Detail</string>
    <string name="bill_detail">Detail Tagihan</string>
    <string name="done">Selesai</string>
    <string name="cancel">Batal</string>
    <string name="select_a_date">Pilih Tanggal</string>
    <string name="masukkan_email_akun_anda_kami_akan_mengirimkan_link_untuk_mengatur_ulang_kata_sandi">Masukkan email akun Anda, kami akan mengirimkan link untuk mengatur ulang kata sandi</string>
    <string name="forgot_password_successful">Kami telah mengirimkan link atur ulang kata sandi ke email Anda</string>
    <string name="picture_taken">Picture Taken</string>
    <string name="camera_permission_not_granted">Camera permission denied.</string>
    <string name="next">Lanjut</string>
    <string name="verify_nric">Verifikasi KTP</string>
    <string name="selfie_with_nric">Selfie dengan KTP</string>
    <string name="verify_selfie_description">Pastikan seluruh wajah dan KTP di daerah kotak yang telah disediakan dan terlihat jelas.</string>
    <string name="logout">Keluar</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="logout_confirmation">Keluar dari ROP?</string>
    <string name="referral_message">Halo , ayo gunakan kode rujukan saya di http://richonpay.com untuk mendapatkan bonus saldo !</string>
    <string name="resend">Kirim Ulang</string>
    <string name="please_select_bank_first">Silakan pilih bank dulu</string>
    <string name="transfer_before">Transfer sebelum</string>
    <string name="transaction_code">Kode Transaksi:</string>
    <string name="send_to">Kirim ke</string>
    <string name="minute">Menit</string>
    <string name="remain">lagi</string>
    <string name="stand_meter">Stand Meter</string>
    <string name="product_price">Harga Produk</string>
    <string name="admin_bank">Admin Bank</string>
    <string name="token_code">Kode Token</string>
    <string name="meter_number">No. Meter</string>
    <string name="game_voucher">Voucher Game</string>
    <string name="total_fine">Total Denda</string>
    <string name="stamp">Materai</string>
    <string name="ppn">PPN</string>
</resources>