<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/updatedBackground"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:paddingStart="@dimen/small"
                android:paddingEnd="@dimen/small"
                android:paddingBottom="@dimen/large">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/small"
                    android:text="@string/bank_name" />

                <LinearLayout
                    android:id="@+id/llBankList"
                    style="@style/DefaulEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:textColor="@color/textColorMain">

                    <TextView
                        android:id="@+id/tvBank"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/select_a_bank"
                        android:textColor="@color/textGrey"
                        android:textSize="@dimen/text_14sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/dropdown_red" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/small"
                    android:text="@string/bank_account_owner" />

                <EditText
                    android:id="@+id/etOwnerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/insert_name"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/text_14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/small"
                    android:text="@string/account_number" />

                <EditText
                    android:id="@+id/etAccountNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/insert_bank_account_number"
                    android:inputType="numberSigned"
                    android:textSize="@dimen/text_14sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal"
                android:paddingStart="@dimen/small"
                android:paddingEnd="@dimen/small"
                android:text="@string/important_semicolon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small"
                android:paddingStart="@dimen/small"
                android:paddingEnd="@dimen/small"
                android:text="@string/add_bank_memo"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/btnSave"
                style="@style/RoundedRedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small"
                android:background="@color/colorPrimary"
                android:text="@string/save"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
