<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small"
        android:background="@drawable/rounded_corner_white"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/small"
            android:paddingTop="@dimen/small"
            android:paddingEnd="@dimen/small"
            android:text="@string/kartu_tanda_penduduk_ktp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/small"
            android:paddingTop="@dimen/tiny"
            android:paddingEnd="@dimen/small"
            android:text="@string/verify_account_bonus_desc" />

        <Button
            android:id="@+id/btnVerifyAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            android:background="@drawable/rounded_bottom_primary_button"
            android:text="@string/verify_now"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>